--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body{
   background-color: rgb(199, 174, 174);
 }
 .wild-header{
-  align-tems:center;
+  text-align:center;
   margin-top:50px;
 }
 .wild{
