--- a/style.css
+++ b/style.css
@@ -7,6 +7,9 @@ body{
 .wild-header{
   text-align:center;
   margin-top:50px;
+  color:rgb(105, 23, 23);
+  text-transform:uppercase;
+  font-size:300%;
 }
 .wild{
   display: flex;
